# sarafun_contact_nodes

./: CMakeLists.txt  README.md  package.xml
action/: ResetKeyframe.action
config/: action_nodes_config.yaml  example_slippage.json
include/contact_nodes/: ResetAction.h  got_contact_condition.hpp  has_grasp_condition.hpp  no_slippage_condition.hpp
launch/: contact_nodes.launch
scripts/: contact_server.py  pick_server.py  reset_state.py
src/contact_nodes/: ResetAction.cpp  got_contact_condition.cpp  has_grasp_condition.cpp  no_slippage_condition.cpp
